errors

In file included from /usr/include/gstreamer-1.0/gst/gstelementfactory.h:38,
                 from /usr/include/gstreamer-1.0/gst/gstelement.h:226,
                 from /usr/include/gstreamer-1.0/gst/gstbin.h:27,
                 from /usr/include/gstreamer-1.0/gst/gst.h:35,
                 from videobalance.c:1:
/usr/include/gstreamer-1.0/gst/gstplugin.h:268:3: error: ‘PACKAGE’ undeclared here (not in a function)
  268 |   PACKAGE, \
      |   ^~~~~~~
videobalance.c:89:1: note: in expansion of macro ‘GST_PLUGIN_DEFINE’
   89 | GST_PLUGIN_DEFINE(GST_VERSION_MAJOR, GST_VERSION_MINOR, videobalance, "Video balance plugin", gst_video_balance_plugin_register, "1.0", "LGPL", "GStreamer", "http://gstreamer.net/")


---------

cp: cannot stat 'videobalance.so': No such file or directory
